# asterism

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: binaries.yml
docs/: GUIDE.md
src/: app_state.rs  config.rs  edit_plan.rs  formats.rs  highlight.rs  input.rs  main.rs  section.rs  ui.rs
src/formats/: difftastic.rs  markdown.rs
src/tests/: app_state.rs  difftastic.rs  edit_plan.rs  section_move.rs
