[[bin]]
name = "asterism"
path = "src/main.rs"

[dependencies]
# atty = "0.2"
clap = { features = ["derive"], version = "4.5" }
edtui = { features = ["arboard", "syntax-highlighting"], version = "0.9.8" }
facet = "0.30"
facet-toml = "0.30"
ratatui = "0.29"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
streaming-iterator = "0.1.9"
syntect = { default-features = false, features = [
  "default-fancy",
], version = "5.3.0" }
textum = "0.1.2"
tree-sitter = "0.25"
tree-sitter-md = "0.5"

[package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
categories = ["command-line-utilities", "text-editors"]
description = "Hyperbolic navigation for tree data"
documentation = "https://docs.rs/asterism/"
edition = "2021"
homepage = "https://github.com/lmmx/asterism"
keywords = ["documentation", "markdown", "tree-sitter", "tui"]
license = "MIT"
name = "asterism"
readme = "README.md"
repository = "https://github.com/lmmx/asterism"
rust-version = "1.90"
version = "0.5.1"

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "https://github.com/lmmx/asterism/releases/download/asterism-v{ version }/asterism-{ target }-v{ version }.tar.gz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/asterism/releases/download/asterism-v{ version }/asterism-aarch64-pc-windows-msvc-v{ version }.zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "https://github.com/lmmx/asterism/releases/download/asterism-v{ version }/asterism-x86_64-pc-windows-msvc-v{ version }.zip"

[profile.dev]
codegen-units = 256
debug = false
lto = false
opt-level = 0
strip = "debuginfo"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 2
strip = "symbols"

[lints.clippy]
all = "deny"
cargo = "deny"
pedantic = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[dev-dependencies]
tempfile = "3.23.0"
